# typecheck

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  pyproject.toml  tox.ini
.github/workflows/: codeql.yml  python-package.yml  python-publish.yml
jdv_typecheck/: __version__.py  check.py
tests/: conftest.py  test_examples.py  test_typecheck.py
tests/pytestutils/: parametrize.py
typecheck/: __init__.py  __version__.py  _tests.py  check.py  null.py
